--- a/package.json
+++ b/package.json
@@ -5,20 +5,27 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.6",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.0",
+    "@types/styled-system": "^5.1.9",
     "@types/yup": "^0.28.3",
     "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.4",
+    "rendition": "^14.11.5",
     "spotify-web-api-js": "^1.4.0",
+    "styled-components": "^5.1.0",
+    "styled-system": "^5.1.5",
     "typescript": "~3.7.2",
     "yup": "^0.28.5"
   },
@@ -42,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/spotify-api": "^0.0.3"
   }
 }
